se agregaron links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Mi Portafolio - Desarrollador Web</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Define la fuente Inter */
+        
+            /* Define la fuente Inter */
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
         body {
             font-family: 'Inter', sans-serif;
@@ -241,7 +242,7 @@
                 </div>  
                 </div>
         </div>
-    </section>
+    </section>          
 
 <section id="portafolio" class="bg-gray-800 rounded-xl mx-4 my-12 card min-height-section-top section-padding">
         <div class="container mx-auto px-4 text-center">
@@ -253,8 +254,8 @@
                         <h3 class="text-2xl font-semibold text-gray-100 mb-3">Aplicación de Notas Simple SaaS</h3>
                         <p class="text-gray-300 mb-5 text-base">Desarrollo de una herramienta SaaS para crear, editar y organizar notas en línea. Soporta creación de usuarios y almacenamiento seguro de datos.</p>
                         <div class="flex justify-start space-x-4">
-                            <a href="#" class="bg-indigo-600 text-white px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-indigo-700 transition duration-300">Ver Demo</a>
-                            <a href="#" class="border border-gray-500 text-gray-300 px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-gray-700 hover:border-gray-600 transition duration-300">Código</a>
+                            <a href="https://d13g00edu.github.io/proyectos-iniciales/notes_app.html" class="bg-indigo-600 text-white px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-indigo-700 transition duration-300">Ver Demo</a>
+                            <a href="https://github.com/D13g00Edu/proyectos-iniciales/blob/main/notes_app.html" class="border border-gray-500 text-gray-300 px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-gray-700 hover:border-gray-600 transition duration-300">Código</a>
                         </div>
                     </div>
                 </div>
@@ -264,8 +265,8 @@
                         <h3 class="text-2xl font-semibold text-gray-100 mb-3">Contador de Texto SaaS</h3>
                         <p class="text-gray-300 mb-5 text-base">Herramienta SaaS que permite a los usuarios pegar texto y obtener un recuento instantáneo de palabras y caracteres. Ideal para escritores y editores.</p>
                         <div class="flex justify-start space-x-4">
-                            <a href="#" class="bg-indigo-600 text-white px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-indigo-700 transition duration-300">Ver Demo</a>
-                            <a href="#" class="border border-gray-500 text-gray-300 px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-gray-700 hover:border-gray-600 transition duration-300">Código</a>
+                            <a href="https://d13g00edu.github.io/proyectos-iniciales/text_counter.html" class="bg-indigo-600 text-white px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-indigo-700 transition duration-300">Ver Demo</a>
+                            <a href="https://github.com/D13g00Edu/proyectos-iniciales/blob/main/text_counter.html" class="border border-gray-500 text-gray-300 px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-gray-700 hover:border-gray-600 transition duration-300">Código</a>
                         </div>
                     </div>
                 </div>
@@ -275,8 +276,8 @@
                         <h3 class="text-2xl font-semibold text-gray-100 mb-3">Generador de Contraseñas SaaS</h3>
                         <p class="text-gray-300 mb-5 text-base">Aplicación SaaS para generar contraseñas fuertes y aleatorias con opciones personalizables. Enfocada en la seguridad y simplicidad de uso.</p>
                         <div class="flex justify-start space-x-4">
-                            <a href="#" class="bg-indigo-600 text-white px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-indigo-700 transition duration-300">Ver Demo</a>
-                            <a href="#" class="border border-gray-500 text-gray-300 px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-gray-700 hover:border-gray-600 transition duration-300">Código</a>
+                            <a href="https://d13g00edu.github.io/proyectos-iniciales/password_generator.html" class="bg-indigo-600 text-white px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-indigo-700 transition duration-300">Ver Demo</a>
+                            <a href="https://github.com/D13g00Edu/proyectos-iniciales/blob/main/password_generator.html" class="border border-gray-500 text-gray-300 px-5 py-2 rounded-lg text-lg font-medium inline-block hover:bg-gray-700 hover:border-gray-600 transition duration-300">Código</a>
                         </div>
                     </div>
                 </div>
@@ -420,7 +421,7 @@
                 formMessage.textContent = 'Enviando mensaje...';
                 formMessage.classList.add('text-gray-400'); // Color neutral mientras se envía
                 formMessage.style.display = 'block';
-
+                
                 setTimeout(() => {
                     // Simula un envío exitoso
                     if (name && email && message) {
